# ginga-context-manager

gingancl-cpp/: Doxyfile  Makefile  Makefile.am  Makefile.in  autogen.sh  config.h  config.h.in  config.h.in~  config.h~  config.status  configure  configure.in  configure.in~  libtool
gingancl-cpp/autom4te.cache/: output.0  output.1  traces.0  traces.1
gingancl-cpp/files/: Makefile  Makefile.am  Makefile.in
gingancl-cpp/include/: .Makefile.am.swo  .Makefile.am.swp  FormatterMediator.h  FormatterScheduler.h  Makefile  Makefile.am  Makefile.am~  Makefile.in
gingancl-cpp/include/adaptation/: Makefile.am  Makefile.am~
gingancl-cpp/include/adaptation/context/: AuthenticationServer.h  AuthenticationServer.h~  ContextBase.h  PresentationContext.h  PresentationContext.h~  RuleAdapter.h
gingancl-cpp/include/adapters/: AdaptersComponentSupport.h  FormatterPlayerAdapter.h  INclEditListener.h  IPlayerAdapter.h  IPlayerAdapterManager.h  Makefile  Makefile.am  Makefile.in  NominalEventMonitor.h  PlayerAdapterManager.h
gingancl-cpp/include/adapters/application/: ApplicationPlayerAdapter.h  Makefile.am
gingancl-cpp/include/adapters/av/: AVPlayerAdapter.h  ChannelPlayerAdapter.h  Makefile.am
gingancl-cpp/include/adapters/image/: Makefile.am
gingancl-cpp/include/adapters/remote/: Makefile.am  RemotePlayerAdapter.h
gingancl-cpp/include/adapters/text/: Makefile.am  PlainTxtPlayerAdapter.h  SubtitlePlayerAdapter.h
gingancl-cpp/include/animation/: AnimationController.h
gingancl-cpp/include/emconverter/: FormatterConverter.h  FormatterLinkConverter.h  Makefile.am
gingancl-cpp/include/focus/: FormatterFocusManager.h  Makefile.am
gingancl-cpp/include/gfx/: GingaNclGfx.h
gingancl-cpp/include/model/: AnchorEvent.h  ApplicationExecutionObject.h  AttributionEvent.h  BeginEventTransition.h  CascadingDescriptor.h  CompositeExecutionObject.h  EndEventTransition.h  EventTransition.h  EventTransitionManager.h  ExecutionObject.h  ExecutionObjectSwitch.h  FocusSourceManager.h  FormatterCausalLink.h  FormatterDeviceRegion.h  FormatterEvent.h  FormatterLayout.h  FormatterLink.h  FormatterRegion.h  IAttributeValueMaintainer.h  IEventListener.h  IFormatterEvent.h  LinkAction.h  LinkActionListener.h  LinkAndCompoundTriggerCondition.h  LinkAssignmentAction.h  LinkCompoundAction.h  LinkCompoundTriggerCondition.h  LinkRepeatAction.h  LinkSimpleAction.h  LinkTransitionTriggerCondition.h  LinkTriggerCondition.h  Makefile  Makefile.am  Makefile.in  NodeNesting.h  PresentationEvent.h  SelectionEvent.h  SwitchEvent.h  TransitionDispatcher.h
gingancl-cpp/include/multidevice/: FMDComponentSupport.h  FormatterActiveDevice.h  FormatterBaseDevice.h  FormatterMultiDevice.h  FormatterPassiveDevice.h  IFormatterMultiDevice.h  Makefile  Makefile.am  Makefile.in
gingancl-cpp/include/prefetch/: Makefile  Makefile.am  Makefile.in  PrefetchManager.h
gingancl-cpp/include/privatebase/: IPrivateBaseManager.h  PrivateBaseContext.h  PrivateBaseManager.h
gingancl-cpp/src/: FormatterMediator.cpp  FormatterScheduler.cpp  Makefile  Makefile.am  Makefile.am~  Makefile.in
gingancl-cpp/src/.deps/: AnimationController.Po  FormatterMediator.Po  FormatterScheduler.Po  PrivateBaseContext.Po  PrivateBaseManager.Po
gingancl-cpp/src/adaptation/: Makefile  Makefile.am  Makefile.am~  Makefile.in
gingancl-cpp/src/adaptation/.deps/: AuthenticationServer.Po  ContextBase.Po  PresentationContext.Po  RuleAdapter.Po
gingancl-cpp/src/adaptation/context/: AuthenticationServer.cpp  AuthenticationServer.cpp~  ContextBase.cpp  PresentationContext.cpp  PresentationContext.cpp~  RuleAdapter.cpp
gingancl-cpp/src/adapters/: FormatterPlayerAdapter.cpp  Makefile  Makefile.am  Makefile.in  NominalEventMonitor.cpp  PlayerAdapterManager.cpp  PlayerAdapterManager.cpp~
gingancl-cpp/src/adapters/.deps/: FormatterPlayerAdapter.Po  NominalEventMonitor.Po  PlayerAdapterManager.Po
gingancl-cpp/src/adapters/application/: ApplicationPlayerAdapter.cpp  Makefile  Makefile.am  Makefile.in
gingancl-cpp/src/adapters/av/: AVPlayerAdapter.cpp  ChannelPlayerAdapter.cpp  Makefile  Makefile.am  Makefile.in
gingancl-cpp/src/adapters/image/: ImagePlayerAdapter.cpp  Makefile  Makefile.am  Makefile.in
gingancl-cpp/src/adapters/remote/: RemotePlayerAdapter.cpp
gingancl-cpp/src/adapters/text/: Makefile  Makefile.am  Makefile.in  PlainTxtPlayerAdapter.cpp  SubtitlePlayerAdapter.cpp
gingancl-cpp/src/animation/: AnimationController.cpp
gingancl-cpp/src/emconverter/: FormatterConverter.cpp  FormatterLinkConverter.cpp  Makefile  Makefile.am  Makefile.in
gingancl-cpp/src/emconverter/.deps/: FormatterConverter.Po  FormatterLinkConverter.Po
gingancl-cpp/src/focus/: FormatterFocusManager.cpp  Makefile  Makefile.am  Makefile.in
gingancl-cpp/src/focus/.deps/: FormatterFocusManager.Po
gingancl-cpp/src/gfx/: GingaNclGfx.cpp  Makefile  Makefile.am  Makefile.in
gingancl-cpp/src/gfx/.deps/: GingaNclGfx.Po
gingancl-cpp/src/model/: Makefile  Makefile.am  Makefile.in
gingancl-cpp/src/model/.deps/: AnchorEvent.Po  ApplicationExecutionObject.Po  AttributionEvent.Po  BeginEventTransition.Po  CascadingDescriptor.Po  CompositeExecutionObject.Po  CostFunctionDuration.Po  DurationFactory.Po  EndEventTransition.Po  EventTransition.Po  EventTransitionManager.Po  ExecutionObject.Po  ExecutionObjectSwitch.Po  FlexibleTimeMeasurement.Po  FocusSourceManager.Po  FormatterCausalLink.Po  FormatterDeviceRegion.Po  FormatterEvent.Po  FormatterLayout.Po  FormatterLink.Po  FormatterRegion.Po  LinearCostFunctionDuration.Po  LinkAction.Po  LinkAndCompoundTriggerCondition.Po  LinkAssessmentStatement.Po  (+17 more)
gingancl-cpp/src/multidevice/: FormatterActiveDevice.cpp  FormatterBaseDevice.cpp  FormatterMultiDevice.cpp  FormatterPassiveDevice.cpp  Makefile  Makefile.am  Makefile.in
gingancl-cpp/src/prefetch/: Makefile  Makefile.am  Makefile.in  PrefetchManager.cpp
gingancl-cpp/src/privatebase/: PrivateBaseContext.cpp  PrivateBaseManager.cpp
gingancl-cpp/test/: Makefile  Makefile.am  Makefile.am~  Makefile.in  test  test.cpp  test.cpp~
gingancl-cpp/test/.deps/: test.Po
(+145 files in other folders)
