# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4
LIBS =

#SUBDIRS = files include/model include/adaptation include/emconverter \
#    include/adapters include/adapters/av include/adapters/av/tv \
#    include/adapters/image include/adapters/application \
#    include/adapters/application/lua include/adapters/text \
#    include/focus include/prefetch include/ \
#    src/model src/adaptation src/emconverter \
#    src/adapters src/adapters/av src/adapters/text \
#    src/adapters/image src/adapters/application/lua \
#    src/focus src/prefetch src test

SUBDIRS = files include/model  include/prefetch \
    include/adapters include/multidevice  include \
    src/model src/adaptation src/emconverter \
    src/adapters src/adapters/av src/adapters/text \
    src/adapters/image \
    src/adapters/application \
    src/adapters/application/declarative/ncl \
    src/adapters/application/declarative/xhtml \
    src/adapters/application/imperative/lua \
    src/multidevice src/focus src/gfx src/prefetch \
    src test
