METASOURCES = AUTO
LIBS =

miscdir = /usr/local/etc/ginga/files/cfg/formatter/
misc_DATA = config/formatter/players/ctrldefs.ini \
    config/formatter/players/mimedefs.ini

epgimgdir = /usr/local/etc/ginga/files/img/epgfactory/
epgimg_DATA = epgFactory/img/emissora.png epgFactory/img/epg01.png \
    epgFactory/img/focus_05h.png epgFactory/img/focus_15h.png \
    epgFactory/img/focus_1h.png epgFactory/img/focus_2h.png \
    epgFactory/img/programacao_05h.png epgFactory/img/programacao_15h.png \
    epgFactory/img/programacao_1h.png epgFactory/img/programacao_2h.png \
    epgFactory/img/selecao_05h.png epgFactory/img/selecao_15h.png \
    epgFactory/img/selecao_1h.png epgFactory/img/selecao_2h.png

epgsrcdir = /usr/local/lib/ginga/epgfactory/src
epgsrc_DATA = epgFactory/src/epg.ncl epgFactory/src/epg.lua \
    epgFactory/src/epgTable.lua

rollerdir = /usr/local/etc/ginga/files/img/roller
roller_DATA = img/b1.png img/b2.png img/b3.png img/b4.png img/b5.png \
    img/b6.png img/b7.png img/b8.png img/loading.png