METASOURCES = AUTO
localIncludedir = /usr/local/include/ginga/gingancl/model
#localInclude_HEADERS = AnchorEvent.h \
#	AttributeValueMaintainer.h AttributionEvent.h\
#	BeginEventTransition.h CascadingDescriptor.h \
#	CompositeExecutionObject.h \
#	CostFunctionDuration.h DurationFactory.h \
#	EndEventTransition.h EventListener.h \
#	EventTransition.h ExecutionObject.h ExecutionObjectSwitch.h \
#	FlexibleTimeMeasurement.h FocusSourceManager.h \
#	FormatterCausalLink.h \
#	FormatterDeviceRegion.h FormatterEvent.h \
#	FormatterLayout.h \
#	FormatterLink.h FormatterRegion.h \
#	LinearCostFunctionDuration.h LinkAction.h \
#	LinkActionListener.h LinkActionProgressionListener.h \
#	LinkAndCompoundTriggerCondition.h \
#	LinkAssessment.h LinkAssessmentStatement.h LinkAssignmentAction.h \
#	LinkAttributeAssessment.h LinkCompoundAction.h LinkCompoundStatement.h \
#	LinkCompoundTriggerCondition.h LinkCondition.h LinkListener.h \
#	LinkRepeatAction.h LinkSimpleAction.h \
#	LinkStatement.h LinkTransitionTriggerCondition.h LinkTriggerCondition.h \
#	LinkTriggerListener.h LinkValueAssessment.h \
#	NodeNesting.h PresentationEvent.h ApplicationExecutionObject.h \
#	SelectionEvent.h SwitchEvent.h \
#	TimeMeasurement.h TransitionDispatcher.h UnflexibleDuration.h

localInclude_HEADERS = IAttributeValueMaintainer.h IFormatterEvent.h \
    IEventListener.h